--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     font-family: 'Libre Franklin', sans-serif;
 }
 
+*:focus {
+    outline: none;
+}
+
 body {
     margin: 0;
     background-color: #202124;
@@ -63,33 +67,72 @@ body {
     align-items: stretch;
     grid-column: 1 / span 2;
     border: solid 0.1rem;
+    align-items: center;
 }
 
 .list-icon {
     margin: 0;
+    padding: 1rem;
+}
+
+.logout-icon {
+    margin: 1rem;
     padding: 0;
-    margin-left: 1rem;
 }
 
 .notes-list {
     display: grid;
     align-content: start;
-    border: solid 0.1rem;
+    border-right: solid 0.1rem;
 }
 
 .note-item {
-    margin: 0.5rem;
-    border-radius: 16px;
+    display: grid;
+    grid-template-columns: 3rem auto;
+    align-items: center;
+    margin: 0.5rem 0.5rem 0rem;
+    padding: 1rem 0.5rem;
+    border: solid #404144;
+    border-radius: 8px;
+}
+
+.note-item:hover {
+    border: solid #707174;
+}
+
+.selected-note {
+    background-color: #404144;
+}
+
+.note-icon {
+    grid-row: 1 / span 2;
+}
+
+.note-title {
+    margin: 0;
+    padding: 0;
+    padding-left: 6pt;
+}
+
+.note-preview {
+    margin: 0;
+    padding: 0;
+    padding-left: 6pt;
 }
 
 .note-viewbox {
     display: grid;
-    grid-template-rows: 4rem 1fr;
+    grid-template-rows: auto 1fr;
+    padding: 1rem 0rem 0rem 2rem;
 }
 
 .note-bar {
     display: flex;
     justify-content: space-between;
+}
+
+.edit-icon {
+    padding: 0rem 2rem;
 }
 
 #note-textbox {
@@ -99,5 +142,4 @@ body {
     border: none;
     background-color: #202124;
     color: blanchedalmond;
-    border: solid 0.1rem;
 }
